--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,8 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="fetchData">fetch data</string>
+    <string name="sortData">sort Data</string>
+    <string name="sortData2">sort Data2</string>
+    
 
 </resources>
